04-nginx-app/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-nginx
  namespace: devops-training
  labels:
    app: my-nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.252
    ports:
    - containerPort: 80
    resources:
      requests:
        cpu: "100m"
        memory: "64Mi"
      limits:
        cpu: "200m"
        memory: "128Gi"
