04-nginx-app/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-service
  namespace: default
spec:
  selector:
    app: my-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
